change to spark 1.6.0 and cdh5.8.4